Correct unit test source file. Update readme.

--- a/unit-tests.html
+++ b/unit-tests.html
@@ -28,7 +28,7 @@
   <script src="views/next-playable-tile-view.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/carc-spec.js"></script>
 
 </head>
 
