Ugh, learning how to do this the backbone way. Realized that Backbone.on events are global and that remove methods don't remove Backbone.on events unless I do it myself. Maybe I try a different approach for global events.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
     <div class='dashboard' id="dashboard">
         <table>
-            <tr>
-                <td id="nextPlayableTile"></td>
-            </tr>
+            <tr id="nextPlayableTile"/>
         </table>
         <button class="rotate" id="CW">Rotate CW</button>
         <button class="rotate" id="CCW">Rotate CCW</button>
