Add multiple layer tiles. No longer rotate entire tile but just image.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         </table>
         <button class="rotate" id="CW">Rotate CW</button>
         <button class="rotate" id="CCW">Rotate CCW</button>
+        <button class="debugsegment">Debug Segment</button>
+        <button class="debugtile">Debug Tile</button>
     </div>
 
     <hr/>
@@ -22,19 +24,19 @@
     <table id="board">
         <tbody>
         <tr>
-            <td id=1>1</td>
-            <td id=2 class="playable">2</td>
-            <td id=3>3</td>
+            <td id=1></td>
+            <td id=2 class="playable"></td>
+            <td id=3></td>
         </tr>
         <tr>
-            <td id=4 class="playable">4</td>
-            <td id=5 class="tile one-face-castle-with-straight-road">5</td>
-            <td id=6 class="playable">6</td>
+            <td id=4 class="playable"></td>
+            <td id=5 class="tile one-face-castle-with-straight-road"></td>
+            <td id=6 class="playable"></td>
         </tr>
         <tr>
-            <td id=7>7</td>
-            <td id=8 class="playable">8</td>
-            <td id=9>9</td>
+            <td id=7></td>
+            <td id=8 class="playable"></td>
+            <td id=9></td>
         </tr>
         </tbody>
     </table>
